# tobiiServer

./: .gitignore  CMakeLists.txt  README.md
include/: ScreenCapture.h  Timer.h  Tobii.h  stdafx.h
src/: ScreenCapture.cpp  Tobii.cpp  tobiiserver.cpp
